# rust_projects

./: README.md
chapter_1/: main  main.rs
chapter_10/src/: generic_data_proc.rs  generic_data_validator.rs  generic_stack.rs  main.rs
chapter_11/: Cargo.toml
chapter_11/src/: calculator.rs  lib.rs  main.rs  string_utils.rs  user_manager.rs
chapter_12/src/: main.rs  parse_config.rs  parse_config2.rs  parse_config3.rs  parse_config4.rs  parse_config5.rs  reading_file.rs  run_config.rs  run_config2.rs
chapter_13/: Cargo.toml
chapter_13/src/: closure4.rs  main.rs  shoe_size_iterator.rs  shoe_size_lib.rs
chapter_14/: Cargo.toml
chapter_14/add_one/src/: lib.rs
chapter_14/add_two/src/: lib.rs
chapter_14/art/: Cargo.toml
chapter_14/art/src/: lib.rs  main.rs
chapter_14/multiply_utils/: Cargo.toml
chapter_14/multiply_utils/src/: lib.rs
chapter_14/src/: main.rs
chapter_16/src/: thread.rs
chapter_17/: Cargo.toml
chapter_18/src/: main.rs  patterns5.rs  patterns7.rs  patterns8.rs
chapter_3/: fibonacci  fibonacci.rs  lyrics  lyrics.rs  temp_converter  temp_converter.rs
chapter_4/: another_ownership  another_ownership.rs  basic_ownership  basic_ownership.rs  slices  slices.rs  slices2  slices2.rs
chapter_6/src/: message_notifications.rs  payment_processor.rs  weather_conditions.rs
chapter_7/: Cargo.toml
chapter_7/src/: basic_calculator.rs  lib.rs  (+3 more)
chapter_9/: Cargo.toml
examples_folder/: Cargo.toml
hello/: README.md
hello_world/: README.md  main
weather_service/: Cargo.toml  README.md
weather_service/src/: transfer.html  weather.html
(+27 files in other folders)
